Trying to identify files that were removed.

--- a/ocsgwh/templates/ocsgwh.css
+++ b/ocsgwh/templates/ocsgwh.css
@@ -21,6 +21,10 @@ tr.diff_empty {
     background-color: gray;
 }
 
+tr.diff_removed {
+    background-color:red;
+}
+
 tr.summary {
     font-weight: bold;
 }
