Visual enhancements and the first draft of the histogram inclusion.

--- a/ocsgwh/templates/global_diff.html
+++ b/ocsgwh/templates/global_diff.html
@@ -1,75 +1,75 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base_page.html" %}
+{% block body %}
+<h1>Global statistics of the repository</h1>
 
-<head>
-    <title>OpenCS Git Work History - Report {{report_date}}</title>
-    <link rel="stylesheet" href="ocsgwh.css" type="text/css">
-</head>
+<h2>Repository properties</h2>
+<p>Basic information about the repository.</p>
+<table class="summary">
+    <tr>
+        <td>Start date</td>
+        <td>{{start_date}}</td>
+    </tr>
+    <tr>
+        <td>End date</td>
+        <td>{{end_date}}</td>
+    </tr>
+    <tr>
+        <td>Total number of days</td>
+        <td>{{total_days}}</td>
+    </tr>
+    <tr>
+        <td>Total number of days with commits</td>
+        <td>{{days_with_commits}} ({{days_with_commits_percent}}%)</td>
+    </tr>
+    <tr>
+        <td>Total number of files</td>
+        <td>{{file_count}}</td>
+    </tr>
+    <tr>
+        <td>Files with no deletions</td>
+        <td>{{added_only}}</td>
+    </tr>
+    <tr>
+        <td>Mean changes per days with commits</td>
+        <td>{{mean_changes_per_day}}</td>
+    </tr>
+    <tr>
+        <td>Number of authors</td>
+        <td>{{author_count}}</td>
+    </tr>
+</table>
 
-<body>
-    <h1>OpenCS Git Work History</h1>
-    <h2>{{repository_dir}} - {{report_date}}</h2>
-    <p><a href="index.html">Back</a></p>
-    <table>
-        <tr>
-            <td>Start date</td>
-            <td>{{start_date}}</td>
-        </tr>
-        <tr>
-            <td>End date</td>
-            <td>{{end_date}}</td>
-        </tr>
-        <tr>
-            <td>Total number of days</td>
-            <td>{{total_days}}</td>
-        </tr>
-        <tr>
-            <td>Total number of days with commits</td>
-            <td>{{days_with_commits}} ({{days_with_commits_percent}}%)</td>
-        </tr>
-        <tr>
-            <td>Total number of files</td>
-            <td>{{file_count}}</td>
-        </tr>
-        <tr>
-            <td>Files with no deletions</td>
-            <td>{{added_only}}</td>
-        </tr>
-        <tr>
-            <td>Mean changes per days with commits</td>
-            <td>{{mean_changes_per_day}}</td>
-        </tr>
-        <tr>
-            <td>Number of authors</td>
-            <td>{{author_count}}</td>
-        </tr>
-    </table>
-    <hr>
-    <table>
-        <tr>
-            <th>File name</th>
-            <th>Added</th>
-            <th>Deleted</th>
-            <th>Changes</th>
-            <th>Update count</th>
-        </tr>
-        {% for d in diff %}
-        <tr class="diff_{{d.diff_class}}">
+<h2>Activity histogram</h2>
 
-            <td>{{ d.file_name }}</td>
-            <td>{{ d.added }}</td>
-            <td>{{ d.deleted }}</td>
-            <td>{{ d.changed }}</td>
-            <td>{{ d.update_count }}</td>
-        </tr>
-        {% endfor %}
-        <tr class="summary">
-            <td>Total</td>
-            <td>{{ total_added }}</td>
-            <td>{{ total_deleted }}</td>
-            <td>{{ total_changed }}</td>
-        </tr>
-    </table>
-</body>
+<embed src="{{histogram}}" style="height: 800px;">
 
-</html>
+<h2>Changes per file</h2>
+<p>Number total of additions, deletions and updates fo a given file for all commits in the repository (measured in
+    lines).</p>
+<p>The changes are calculated by git log thus statistics for binary files may not be precise.</p>
+<table class="diff_log">
+    <tr>
+        <th>File name</th>
+        <th>Added</th>
+        <th>Deleted</th>
+        <th>Changes</th>
+        <th>Update count</th>
+    </tr>
+    {% for d in diff %}
+    <tr class="diff_{{d.diff_class}}">
+
+        <td>{{ d.file_name }}</td>
+        <td>{{ d.added }}</td>
+        <td>{{ d.deleted }}</td>
+        <td>{{ d.changed }}</td>
+        <td>{{ d.update_count }}</td>
+    </tr>
+    {% endfor %}
+    <tr class="summary">
+        <td>Total</td>
+        <td>{{ total_added }}</td>
+        <td>{{ total_deleted }}</td>
+        <td>{{ total_changed }}</td>
+    </tr>
+</table>
+{% endblock %}
