--- a/ocsgwh/templates/index.html
+++ b/ocsgwh/templates/index.html
@@ -1,40 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <title>OpenCS Git Work History - Report {{report_date}}</title>
-    <link rel="stylesheet" href="ocsgwh.css" type="text/css">
-</head>
-
-<body>
-    <h1>OpenCS Git Work History</h1>
-    <h2>{{repository_dir}} - {{report_date}}</h2>
-
-    <h3>Developers</h3>
-    <table>
-        <tr>
-            <th>Name</th>
-            <th>e-mails</th>
-        </tr>
-        {% for a in authors %}
-        <tr>
-            <td>{{a.name}}</td>
-            <td>
-                <ul>
-                    {% for e in a.authors %}
-                    <li>{{ e }}</li>
-                    {% endfor %}
-                </ul>
-            </td>
-        </tr>
-        {% endfor %}
-        </ul>
-    </table>
-
-    <h3>Reports</h3>
-    <ul>
-        <li><a href="global_diff.html">Global changes report</a></li>
+{% extends "base.html" %}
+{% block body %}
+<h3>Developers</h3>
+<table>
+    <tr>
+        <th>Name</th>
+        <th>e-mails</th>
+    </tr>
+    {% for a in authors %}
+    <tr>
+        <td>{{a.name}}</td>
+        <td>
+            <ul>
+                {% for e in a.authors %}
+                <li>{{ e }}</li>
+                {% endfor %}
+            </ul>
+        </td>
+    </tr>
+    {% endfor %}
     </ul>
-</body>
+</table>
 
-</html>
+<h3>Reports</h3>
+<ul>
+    <li><a href="global_diff.html">Global changes report</a></li>
+</ul>
+{% endblock %}
