--- a/ocsgwh/templates/global_diff.html
+++ b/ocsgwh/templates/global_diff.html
@@ -41,7 +41,23 @@
 
 <h2>Activity histogram</h2>
 
-<embed src="{{histogram}}" style="height: 800px;">
+<!-- Slideshow container -->
+<div class="slideshow-container">
+
+    <!-- Full-width images with number and caption text -->
+    {% for h in histogram %}
+    <div class="mySlides fade">
+        <embed src="{{h[1]}}" style="height: 800px;">
+        <div class="text">{{h[0]}}</div>
+    </div>
+    {% endfor %}
+
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+<script src="slideshow.js" type="text/javascript"></script>
 
 <h2>Changes per file</h2>
 <p>Number total of additions, deletions and updates fo a given file for all commits in the repository (measured in
