--- a/ocsgwh/templates/global_diff.html
+++ b/ocsgwh/templates/global_diff.html
@@ -41,6 +41,13 @@
 
 <h2>Activity histogram</h2>
 
+<h3>Weekly</h3>
+
+<embed src="{{weekly_histo[1]}}" style="height: 800px;">
+<div class="text">{{weekly_histo[0]}}</div>
+
+<h3>Daily</h3>
+
 <!-- Slideshow container -->
 <div class="slideshow-container">
 
@@ -57,7 +64,7 @@
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
 <br>
-<script src="slideshow.js" type="text/javascript"></script>
+<script src="slideshow.js" type=""></script>
 
 <h2>Changes per file</h2>
 <p>Number total of additions, deletions and updates fo a given file for all commits in the repository (measured in
