Adding statistics for the number of lines added at once with no updates.

--- a/ocsgwh/templates/base_diff.html
+++ b/ocsgwh/templates/base_diff.html
@@ -29,7 +29,7 @@
     </tr>
     <tr>
         <td>Files with no deletions</td>
-        <td>{{added_only}}</td>
+        <td>{{added_only}} ({{added_only_lines}} lines)</td>
     </tr>
     <tr>
         <td>Merges</td>
